Format content on static pages

--- a/app/views/about/index.html.haml
+++ b/app/views/about/index.html.haml
@@ -1,30 +1,12 @@
 .page-header
-  %h3 About Us
+  %h2 About Us
 
-Thomas Gerber and Herb Tabak incorporated Business Co-Creation Strategies as a
+%p Thomas Gerber and Herb Tabak incorporated Business Co-Creation Strategies as a Colorado C-Corp in 2008 when they were both in their late 60ies.
 
-Colorado C-Corp in 2008 when they were both in their late 60ies.
+%p Both had started a number of their own businesses and wanted to support businesses that “Were good for Humanity and the Planet” and could scale to a size that was at least national, if not inter-national.
 
-Both had started a number of their own businesses and wanted to support businesses
+%p They both felt that any business that was “Good for Humanity and the Planet” has the obligation to grow as quickly as possible without sacrificing quality.
 
-that “Were good for Humanity and the Planet” and could scale to a size that was at least
+%p Since 2008 they began a number of their own businesses and did some consulting with businesses that could truly make a difference.
 
-They both felt that any business that was “Good for Humanity and the Planet” has the
-
-obligation to grow as quickly as possible without sacrificing quality.
-
-Since 2008 they began a number of their own businesses and did some consulting with
-
-businesses that could truly make a difference.
-
-This latest “re-invention” of their desire to “make as much of a positive difference as
-
-possible” is an exciting combination of a number of entities that enables them to have
-
-even more impact. In effect, they get to “Joint-Venture” with Visionaries and support
-
-entrepreneurial interns at the same time as starting businesses that are “Good for
-
-Humanity and the Planet”. Everyone wins – Humanity, The Planet, BCCS, Visionaries,
-
-Under Employed Interns and Seniors, The Economy.
+%p This latest “re-invention” of their desire to “make as much of a positive difference as possible” is an exciting combination of a number of entities that enables them to have even more impact. In effect, they get to “Joint-Venture” with Visionaries and support entrepreneurial interns at the same time as starting businesses that are “Good for Humanity and the Planet”. Everyone wins – Humanity, The Planet, BCCS, Visionaries, Under Employed Interns and Seniors, The Economy.
