--- a/app/views/capital/index.html.haml
+++ b/app/views/capital/index.html.haml
@@ -1,82 +1,38 @@
 .page-header
-  %h3Raising Capital
+  %h2 Raising Capital
 
-Often people say they don’t have any money. In actuality, if they live in America, they are usually
+%p Often people say they don’t have any money. In actuality, if they live in America, they are usually saying they don’t choose to gather the money to buy what you are selling. Our contention is that anyone in America, including a homeless person, could gather $10,000 within a week if they decided to and were clear about achieving that decision. The following is a tool to help anyone become empowered to receive $10,000
 
-saying they don’t choose to gather the money to buy what you are selling. Our contention is that
+%h1 How to Raise $10,000.00 in 7 days
+%h3When you do not have any credit or assets.
 
-anyone in America, including a homeless person, could gather $10,000 within a week if they
+%p One of the primary “skills” of a business person is the ability to raise capital.
 
-decided to and were clear about achieving that decision. The following is a tool to help anyone
+%p It is said that Colonel Sanders (who started KFC) had to go to 1000 banks before he got the money to start his business. And Walt Disney (Disney World) went bankrupt 3 times. And Donald Trump declared bankruptcy 7 times.
 
-become empowered to receive $10,000
+%ol
+  %li 1. Put yourself in the mind-frame of having to raise the money or your best friend will lose his life. (You are going to do whatever it takes to raise the money.)
+  %li 2. Know that you have a plan for paying it back that can’t lose if you borrow the money.
+  %li 3. Have a back-up plan (or 2) for paying back the money in case the first plan does not work.
 
-How to Raise $10,000.00 in 7 days
+%p A number of ways to raise the money:
 
-When you do not have any credit or assets.
+%ol
+  %li a. Have someone gift you the money.
+  %li b. Borrow on someone else’s credit card and make the payments on that card.
+  %li c. Have someone else refinance their car and you make the payments.
+  %li d. Sell everything you don’t use at a garage sale.
+  %li e. Get 10 friends to each lend you $1,000 or 100 friends to each lend you $100.
+  %li f. Sell your blood.
+  %li g. Offer to split the profit with someone.
+  %li h. Offer to pay a person twice the money back in 2 years.
+  %li i. Get a partner that puts up the money and you do the labor.
+  %li j. Do $10,000 worth of work in 2 years for someone you know.
+  %li k. Contract to do $100 worth of labor/ month for a friend over the next 100 months if they will pay in advance.
+  %li l. Form a corporation and sell stock (Call the SBA for advice or go to the library)
+  %li m. Exchange a % (say 3%) of future income of the business for a length of time (say 7 years).
+  %li n. Get a friend to co-sign a loan.
+  %li o. Pay a friend something for using their CD as collateral for a loan (rent their CD).
+  %li p. Have someone pay to work for you as the CEO (We know one person who loaned the company $100,000 to get a job that paid $50,000 a year).
 
-One of the primary “skills” of a business person is the ability to raise capital.
-
-It is said that Colonel Sanders (who started KFC) had to go to 1000 banks
-
-before he got the money to start his business. And Walt Disney (Disney
-
-World) went bankrupt 3 times. And Donald Trump declared bankruptcy 7
-
-times.
-
-1. Put yourself in the mind-frame of having to raise the money or your best friend will
-
-lose his life. (You are going to do whatever it takes to raise the money.)
-
-2. Know that you have a plan for paying it back that can’t lose if you borrow the money.
-
-3. Have a back-up plan (or 2) for paying back the money in case the first plan does not
-
-work.
-
-A number of ways to raise the money:
-
-a. Have someone gift you the money.
-
-b. Borrow on someone else’s credit card and make the payments on that card.
-
-c. Have someone else refinance their car and you make the payments.
-
-d. Sell everything you don’t use at a garage sale.
-
-e. Get 10 friends to each lend you $1,000 or 100 friends to each lend you $100.
-
-f. Sell your blood.
-
-g. Offer to split the profit with someone.
-
-h. Offer to pay a person twice the money back in 2 years.
-
-i. Get a partner that puts up the money and you do the labor.
-
-j. Do $10,000 worth of work in 2 years for someone you know.
-
-k. Contract to do $100 worth of labor/ month for a friend over the next 100
-
-months if they will pay in advance.
-
-l. Form a corporation and sell stock (Call the SBA for advice or go to the
-
-library)
-
-m. Exchange a % (say 3%) of future income of the business for a length of time
-
-(say 7 years).
-
-n. Get a friend to co-sign a loan.
-
-o. Pay a friend something for using their CD as collateral for a loan (rent their
-
-CD).
-
-p. Have someone pay to work for you as the CEO (We know one person who
-
-loaned the company $100,000 to get a job that paid $50,000 a year).
-
-Do a combination of all of the above and any new ones you can think of.
+%p Do a combination of all of the above and any new ones you can think of.
