--- a/app/views/culture/index.html.haml
+++ b/app/views/culture/index.html.haml
@@ -1,71 +1,65 @@
 .page-header
   %h2 Culture
 
-%h3 Balanced Lifestyle
-.ul
-  .li Work between 20 and 40 hours a week
-  .li Adequate daily exercise
-  .li Social time
-  .li Eat food that supports health
-  .li Lots of laughter and play
-  .li Support others in having their dreams come true
-  .li Have a list of 10 items a person wants to have happen within a year of posting
-  .li Have a “bucket list” of 10 items for each employee available to all
-  .li Know what other peoples list is
-  .li Know what their own “special genius” is
+%h4 Balanced Lifestyle
+%ul
+  %li Work between 20 and 40 hours a week
+  %li Adequate daily exercise
+  %li Social time
+  %li Eat food that supports health
+  %li Lots of laughter and play
+%h4 Support others in having their dreams come true
+%ul
+  %li Have a list of 10 items a person wants to have happen within a year of posting
+  %li Have a “bucket list” of 10 items for each employee available to all
+  %li Know what other peoples list is
+  %li Know what their own “special genius” is
 
-Live by Cowboy Ethics:
+%h4 Live by Cowboy Ethics:
+%p
+  %strong image placeholder
 
-We will pay 1% of the income of the business to an environmental group – see  http://
+%br
+%p We will pay 1% of the income of the business to an environmental group – see  http://onepercentfortheplanet.org
 
-onepercentfortheplanet.org
+%p And we will qualify the business as a business that could be a Game Changer 500 company – see www.GameChangers500.com
 
-And we will qualify the business as a business that could be a Game Changer 500
-
-company – see www.GameChangers500.com
-
-We qualify for a B-Corporation
+%p We qualify for a B-Corporation
 
 The “Genius of the And”
-
+%br
 Delivery system like Amazon.com
-
+%br
 Sharing the risks and rewards
-
+%br
 Openness and Transparency always
-
+%br
 Affiliate marketing is often part of the marketing mix
-
+%br
 We use Dialogue and Discussion
-
+%br
 We use Consensus and Majority Rule and Authoritarian Decision Making
-
+%br
 We hire exceptional employees
-
+%br
 We pay above average wages to exceptional employees plus profit share
-
+%br
 We eliminate average employees and give them great severance packages (like Netflix)
-
+%br
 No-one can work for the company more than 5 years
-
-We support each employee in moving on to their next company or starting their own
-
-business. This company is a learning expansion experience.
-
-A bonus of 10% is available for training (personal growth and specific) for each
-
-employee for approved workshops and seminars as well as in-house
-
+%br
+We support each employee in moving on to their next company or starting their own business. This company is a learning expansion experience.
+%br
+A bonus of 10% is available for training (personal growth and specific) for each employee for approved workshops and seminars as well as in-house
+%br
 We are usually 5 to 10 minutes early for meetings
-
-One massage and one Chiropractic adjustment every other week on company time and
-
-paid for by the company
-
+%br
+One massage and one Chiropractic adjustment every other week on company time and paid for by the company
+%br
 One Body Talk session every other week on company time and paid for by the company
-
+%br
 2 – 2 1⁄2 hour sessions at the rec center every week on company time.
-
+%br
 Incorporate the philosophy of The Five Dysfunctions of a Team by Patrick Lencioni
-
+%br
 Understand Deming’s 14 Points and follow them
