--- a/app/views/requirements/index.html.haml
+++ b/app/views/requirements/index.html.haml
@@ -1,102 +1,96 @@
 .page-header
-  %h3Fees & Time
+  %h2 Fees & Time
 
-Fees:
+%h4 Fees:
 
-Founder/Co-Creator:
+%u Founder/Co-Creator:
 
- $10 application fee
+%p $10 application fee
 
-Visionary/Co-Creator:
+%u Visionary/Co-Creator:
 
-$10 application fee for their idea
+%p $10 application fee for their idea
 
-$100 interview fee for a 1 hour interview about their idea
+%p $100 interview fee for a 1 hour interview about their idea
 
-$500 research fee to do initial research about the marketability of the idea
+%p $500 research fee to do initial research about the marketability of the idea
 
-The Created Business:
+%u The Created Business:
 
-Pays TBA $1,000 a month for 8 years starting as soon as it has revenue of $10,000 a
+%p Pays TBA $1,000 a month for 8 years starting as soon as it has revenue of $10,000 a month.
 
-month.
+%h4 Trade for Labor:
 
-Trade for Labor:
+%p There are 48 units out of 100 units available for sale or trade during the first 12 weeks of the business (valued at $5,000 each). Each Founder is rewarded 2 units for doing 480 hours of work (40 x 12 = 480 hours)($21/hr.). Each Mentor/Coach (except the CEO/Mentor) is rewarded 1 unit for 48 hours (4 x 12 = 48)($104/hr.) In addition, the visionary, the CEO/mentor, and TBA are all rewarded 6 units each.
 
-There are 48 units out of 100 units available for sale or trade during the first 12 weeks
+%p Most teams will have 4 Founder/Co-Creators, although some will have 5.
 
-of the business (valued at $5,000 each). Each Founder is rewarded 2 units for doing
+%h5 Units Rewarded
 
-480 hours of work (40 x 12 = 480 hours)($21/hr.). Each Mentor/Coach (except the
+%table
+  %tr
+    %td
+    %td 4 Founders
+    %td 5 Founders
 
-CEO/Mentor) is rewarded 1 unit for 48 hours (4 x 12 = 48)($104/hr.) In addition, the
+  %tr
+    %td Founders
+    %td 8
+    %td 10
 
-visionary, the CEO/mentor, and TBA are all rewarded 6 units each.
+  %tr
+    %td Mentors
+    %td 3
+    %td 4
 
-Most teams will have 4 Founder/Co-Creators, although some will have 5.
+  %tr
+    %td Visionary
+    %td 6
+    %td 6
 
-Units Rewarded 4 Founders 5 Founders
+  %tr
+    %td CEO/mentor
+    %td 6
+    %td 6
 
-Founders 8 10
+  %tr
+    %td BSA
+    %td 6
+    %td 6
 
-Mentors 3 4
+%p The Support people can be paid in ownership units also.
 
-Visionary 6 6
+%ul
+  %li Chiropractor
+  %li Massage Therapist
+  %li Body Talk Practitioner
 
-CEO/mentor 6 6
+%p here are also other support people that need to be paid:
 
-BSA 6 6
+%ul
+  %li Bookkeeper – about 1 hour a week
+  %li Techi Person – about 4 hours a week
+  %li CPA – for setting up books
+  %li Lawyer – for setting up business entity, etc.
 
-The Support people can be paid in ownership units also.
+%h4 Finder’s Fee:
 
-Chiropractor
+%p A finder’s fee of 15% is paid for finding someone who buys a unit for cash.
 
-Massage Therapist
+%h4 Time:
 
-Body Talk Practitioner
+%p Each Visionary works 35 hours a week and does 5 hours of specific exercise a week for the first 12 weeks.
 
-There are also other support people that need to be paid:
+%p Each Founder/Co-Creator works the same 35/5 hour schedule
 
-Bookkeeper – about 1 hour a week
+%p The CEO/Mentor also works the same 35/5 hour schedule.
 
-Techi Person – about 4 hours a week
+%p The other Mentors work 4 hours a week to outline what the person they are coaching will do during the 31 hours they are not being coached or exercising.
 
-CPA – for setting up books
+%p There is a 20 hour block of time each week where Founder/Co-Creators get together (usually from 3 PM to 7 PM for most teams) so they can work cohesively as a team.
 
-Lawyer – for setting up business entity, etc.
+%p A TBA representative will monitor the progress of the business development and help make corrective decisions when necessary.
 
-Finder’s Fee:
+%p Advisory board members are expected to give advice once a month.
 
-A finder’s fee of 15% is paid for finding someone who buys a unit for cash.
-
-Time:
-
-Each Visionary works 35 hours a week and does 5 hours of specific exercise a week for
-
-the first 12 weeks.
-
-Each Founder/Co-Creator works the same 35/5 hour schedule
-
-The CEO/Mentor also works the same 35/5 hour schedule.
-
-The other Mentors work 4 hours a week to outline what the person they are coaching
-
-will do during the 31 hours they are not being coached or exercising.
-
-There is a 20 hour block of time each week where Founder/Co-Creators get together
-
-(usually from 3 PM to 7 PM for most teams) so they can work cohesively as a team.
-
-A TBA representative will monitor the progress of the business development and help
-
-make corrective decisions when necessary.
-
-Advisory board members are expected to give advice once a month.
-
-The CEO of TBA helps the CEO/Mentor of each business sell the units of that business
-
-within the first 12 weeks of the business and teaches the Founder/Co-Creator CEO
-
-the process. Every Founder/Co-Creator and coach/mentor is also focused on creating
-
-support for selling the available units. That is the focus of all their work.
+%p The CEO of TBA helps the CEO/Mentor of each business sell the units of that business within the first 12 weeks of the business and teaches the Founder/Co-Creator CEO the process. Every Founder/Co-Creator and coach/mentor is also focused on creating support for selling the available units. That is the focus of all their work.
