--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,15 +10,19 @@
   %nav.navbar.navbar-inverse.navbar-fixed-top
     .container
       .navbar-header
-        = link_to "Why", root_path, class: "navbar-brand"
+        = link_to "Home", root_path, class: "navbar-brand"
       .collapse.navbar-collapse
         %ul.nav.navbar-nav.navbar-right
-          - if current_user
-            %li= link_to current_user.full_name, user_path(current_user)
-            %li= link_to "Sign Out", sign_out_path
-          - else
-            %li= link_to "Sign Up", sign_up_path
-            %li= link_to "Sign In", sign_in_path
+          %li=link_to "Store", store_path
+          %li=link_to "Apply", apply_path
+          %li=link_to "Fees & Time", requirements_path
+          %li=link_to "Capital", capital_path
+          %li=link_to "Affiliates", affiliates_path
+          %li=link_to "Culture", culture_path
+          %li=link_to "FAQ", faq_path
+          %li=link_to "About", about_path
+          %li=link_to "Contact", contact_us_path
+          
   %br
   %br
   %br
