Set up homepage

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,2 +1,64 @@
 .page-header
+  %center
   %h2 Want to be a Founder/Co-Creator in a Start-up Business?
+
+.row
+  .col-md-3
+    %h4 Board Members
+    %ul
+      %li John
+      %li Jill
+      %li Amber
+      %li Julie
+      %li Thomas
+      %li Jack
+      %li Mark Victor
+      %li Wendy
+      %li Amy
+      %li Fred
+
+  .col-md-6
+    %p We support Visionaries who want to help start more than one business a year so they can continually go back into their garage, kitchen, or basement and work on another idea.
+
+    %h4 The Intern/Co-Creators Co-Create the business with the Visionary.
+
+    %p The business ideas must:
+    %ol
+      %li Be good for Humanity and the Planet
+      %li Be able to scale from revenue of $10,000 a month to $1 million a month within 36 months.
+      %li Have an approved culture
+
+    %p Our continually improving system will:
+    %ol
+      %li Help find the 4 or 5 person start-up teams of Intern/Co-Creators
+      %li Support those teams in growing their business
+      %li Help raise the capital to expand the businesses
+
+    %p We own a share of the new business that is equal to the amount the visionary owns. A sizable amount of the business will usually be sold to raise the capital for expansion.
+
+    %p We are currently looking for Intern/Co-Creators for the following positions:
+
+    %ul
+      %li CEO
+      %li Public Relations
+      %li Sales
+      %li Marketing
+      %li Web Developers
+
+    %p Intern/Co-Creators will be rewarded with a percent of ownership of the company they are helping Co-Create.
+
+    %p In addition we need 10 people to be on the advisory board of each business. Advisory board members are expected to give advice at least once a month.
+
+    %p Each business will also have 4 or 5 mentor/coach/consultants. The mentor/coach/consultants will work with the person they are assigned to 4 hours a week. They also will earn a percent of the business.
+
+    %p If you would like to get involved in any way with this project, email your resume with a sentence about what you would like to do to Team@BizAcce.com
+
+  .col-md-3
+    %h4 Sponsors/Partners
+    %ul
+      %li Elevate
+      %li evo 3
+      %li IBM
+      %li Microsoft
+      %li Google
+      %li 3M
