--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,7 +1,7 @@
 !!! HTML
 %html
 %head
-  %titleWhyApp
+  %title The Biz Accelerator
   = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
   = javascript_include_tag 'application', 'data-turbolinks-track' => true
   = csrf_meta_tags
@@ -22,7 +22,7 @@
           %li=link_to "FAQ", faq_path
           %li=link_to "About", about_path
           %li=link_to "Contact", contact_us_path
-          
+
   %br
   %br
   %br
