--- a/app/views/apply/index.html.haml
+++ b/app/views/apply/index.html.haml
@@ -10,60 +10,60 @@
 %p Each potential Co-Creator fills out the “Application and Mini-workshop” and submits:
 
 %ol
-  %li a. Results of www.MyEZOG.com profile
+  %li a. Results of #{ link_to 'www.MyEZOG.com', "http://www.MyEZOG.com" } profile
   %li b. Majors PTI Personality Report
   %li c. Enneagram Report
   %li d. Test results from Strength Finder 2.0 by Tom Rath
   %li e. Test results from Now Discover Your Strengths by Marcus Buckingham
   %li f. Test results from Entrepreneurial Strengths Finder by Jim Clifton
-  %li g. Results of $97 test at www.wealthdynamicscentral.com
-  %li h. Results of test at www.MyGeniusTest.com
+  %li g. Results of $97 test at #{ link_to "www.wealthdynamicscentral.com", "http://www.wealthdynamicscentral.com" }
+  %li h. Results of test at #{ link_to "www.mygeniustest.com", "http://www.MyGeniusTest.com" }
   %li i. Proof you have been a participant in a Start-up Weekend
-  %li j. Your Grit Test results - https://sasupenn.qualtrics.com/SE/?SID=SV_06f6QSOS2pZW9qR
+  %li j. Your #{ link_to "Grit Test results", "https://sasupenn.qualtrics.com/SE/?SID=SV_06f6QSOS2pZW9qR" }
   %li   k. Proof you have attended For Love and Money ...be Good with People by Jolina Karen
 
 %p Potential Founder/Co-Creators, Visionary/Co-Creators, and Mentor/Co-Creators all have the same application and indicate which position they are applying for to be able to take the next steps.
 
 %h4 To understand this model of starting a business:
 
-•  Start by watching 33 min. of videos starting here - http://vimeo.com/37359240
+•  Start by watching 33 min. of - #{ link_to "videos starting here", "http://vimeo.com/37359240" }
 %br
-•  More information at www.SteveBlank.com
+•  More information at #{ link_to "www.SteveBlank.com", "http://www.SteveBlank.com" }
 %br
 %br
 
 %h4 Suggested Reading list:
 
-The Lean Startup by Eric Ries (2011)
+= link_to "The Lean Startup by Eric Ries (2011)", "http://www.amazon.com/Lean-Startup-Entrepreneurs-Continuous-Innovation/dp/0307887898/ref=sr_1_1?ie=UTF8&qid=1427649567&sr=8-1&keywords=the+lean+startup"
 %br
-Business Model Generation by Alexander Osterwalder & Yves Pigneur (2010)
+= link_to "Business Model Generation by Alexander Osterwalder & Yves Pigneur (2010)", "http://www.amazon.com/Business-Model-Generation-Visionaries-Challengers/dp/0470876417"
 %br
-The Startup Owner’s Manual by Steve Blank and Bob Dorf (2012)
+= link_to "The Startup Owner’s Manual by Steve Blank and Bob Dorf (2012)", "http://www.amazon.com/Startup-Owners-Manual-Step---Step/dp/0984999302/ref=sr_1_1?s=books&ie=UTF8&qid=1427649797&sr=1-1&keywords=the+startup+owner%27s+manual"
 %br
-Venture Capital for Dummies by Nicole Gravagna and Peter Adams (2013)
+= link_to "Venture Capital for Dummies by Nicole Gravagna and Peter Adams (2013)", "http://www.amazon.com/Venture-Capital-Dummies-Nicole-Gravagna/dp/1118642236/ref=sr_1_1?s=books&ie=UTF8&qid=1427649864&sr=1-1&keywords=Venture+Capital+for+Dummies"
 %br
-Venture Deals by Brad Feld and Jason Mendelson (2013)
+= link_to "Venture Deals by Brad Feld and Jason Mendelson (2013)", "http://www.amazon.com/Venture-Deals-Smarter-Lawyer-Capitalist/dp/1118443616/ref=sr_1_3?s=books&ie=UTF8&qid=1427649864&sr=1-3&keywords=Venture+Capital+for+Dummies"
 %br
-Do More Faster by David Cohen and Brad Feld (2011)
+= link_to "Do More Faster by David Cohen and Brad Feld (2011)", "http://www.amazon.com/Do-More-Faster-TechStars-Accelerate/dp/0470929839/ref=sr_1_1?s=books&ie=UTF8&qid=1427649929&sr=1-1&keywords=do+more+faster"
 %br
-Zero to One by Peter Thiel (2014)
+= link_to "Zero to One by Peter Thiel (2014)", "http://www.amazon.com/Zero-One-Notes-Startups-Future/dp/0804139296/ref=sr_1_1?s=books&ie=UTF8&qid=1427649974&sr=1-1&keywords=zero+to+one"
 %br
-Blueprint to a Billion by David Thomson (2006)
+= link_to "Blueprint to a Billion by David Thomson (2006)", "http://www.amazon.com/Blueprint-Billion-Essentials-Achieve-Exponential/dp/0471747475/ref=sr_1_1?s=books&ie=UTF8&qid=1427649993&sr=1-1&keywords=blueprint+to+a+billion"
 %br
-Built to Last by Jim Collins and Jerry Porras (1994)
+= link_to "Built to Last by Jim Collins and Jerry Porras (1994)", "http://www.amazon.com/Built-Last-Successful-Visionary-Essentials/dp/0060516402/ref=sr_1_1?s=books&ie=UTF8&qid=1427650055&sr=1-1&keywords=built+to+last"
 %br
-Blue Ocean Strategy by W. Chan Kim and Renee Mauborgne (2005)
+= link_to "Blue Ocean Strategy by W. Chan Kim and Renee Mauborgne (2005)", "http://www.amazon.com/Blue-Ocean-Strategy-Expanded-Uncontested/dp/1625274491/ref=sr_1_1?s=books&ie=UTF8&qid=1427650071&sr=1-1&keywords=Blue+Ocean+Strategy"
 %br
-No Contest by Alfie Kohn (1986)
+= link_to "No Contest by Alfie Kohn (1986)", "http://www.amazon.com/No-Contest-Case-Against-Competition/dp/0395631254/ref=sr_1_1?s=books&ie=UTF8&qid=1427652482&sr=1-1&keywords=No+Contest"
 %br
-The Five Dysfunctions of a Team by Patrick Lencioni (2002)
+= link_to "The Five Dysfunctions of a Team by Patrick Lencioni (2002)", "http://www.amazon.com/Five-Dysfunctions-Team-Leadership-Fable/dp/0787960756/ref=sr_1_1?s=books&ie=UTF8&qid=1427652508&sr=1-1&keywords=the+five+dysfunctions+of+a+team"
 %br
-Collective Genius by Linda Hill, Greg Brandeau, Emily Truelove, Kent Lineback (2014)
+= link_to "Collective Genius by Linda Hill, Greg Brandeau, Emily Truelove, Kent Lineback (2014)", "http://www.amazon.com/Collective-Genius-Practice-Leading-Innovation/dp/1422130029/ref=sr_1_1?s=books&ie=UTF8&qid=1427652618&sr=1-1&keywords=Collective+Genius"
 %br
-The Entrepreneur Roller Coaster by Darren Hardy (2015)
+= link_to "The Entrepreneur Roller Coaster by Darren Hardy (2015)", "http://www.amazon.com/Entrepreneur-Roller-Coaster-Time-JoinTheRide/dp/0990798623/ref=sr_1_1?s=books&ie=UTF8&qid=1427652577&sr=1-1&keywords=The+Entrepreneur+Roller+Coaster"
 %br
-The Founder’s Dilemmas by Noam Wasserman (2013)
+= link_to "The Founder’s Dilemmas by Noam Wasserman (2013)", "http://www.amazon.com/Founders-Dilemmas-Anticipating-Foundation-Entrepreneurship/dp/0691158304/ref=sr_1_1?s=books&ie=UTF8&qid=1427652599&sr=1-1&keywords=the+founders+dilemma"
 %br
-Slicing Pie by Mike Moyer (2012)
+= link_to "Slicing Pie by Mike Moyer (2012)", "http://www.amazon.com/Slicing-Pie-Funding-Company-Without/dp/0615700624/ref=sr_1_1?s=books&ie=UTF8&qid=1427652664&sr=1-1&keywords=Slicing+Pie"
 %br
-Predictably Irrational by Dan Ariely (2008)
+= link_to "Predictably Irrational by Dan Ariely (2008)", "http://www.amazon.com/Predictably-Irrational-Revised-Expanded-Decisions/dp/0061353248/ref=sr_1_1?s=books&ie=UTF8&qid=1427652681&sr=1-1&keywords=Predictably+Irrational"
