--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -51,7 +51,7 @@
 
     %p Each business will also have 4 or 5 mentor/coach/consultants. The mentor/coach/consultants will work with the person they are assigned to 4 hours a week. They also will earn a percent of the business.
 
-    %p If you would like to get involved in any way with this project, email your resume with a sentence about what you would like to do to Team@BizAcce.com
+    %p If you would like to get involved in any way with this project, email your resume with a sentence about what you would like to do to: #{ mail_to "team@bizacce.com", "Team@BizAcce.com" }
 
   .col-md-3
     %h4 Sponsors/Partners
