--- a/app/views/culture/index.html.haml
+++ b/app/views/culture/index.html.haml
@@ -20,9 +20,9 @@
   %strong image placeholder
 
 %br
-%p We will pay 1% of the income of the business to an environmental group – see  http://onepercentfortheplanet.org
+%p We will pay 1% of the income of the business to an environmental group – see #{link_to "One Percent For the Planet", "http://onepercentfortheplanet.org"}
 
-%p And we will qualify the business as a business that could be a Game Changer 500 company – see www.GameChangers500.com
+%p And we will qualify the business as a business that could be a #{ link_to "Game Changer 500 Company", "http://www.GameChangers500.com"}
 
 %p We qualify for a B-Corporation
 
